app-gitops/services/sampleapi/base/route.yaml
# app-gitops/base/route.yaml
# OpenShift Route for external HTTPS access
# Host is auto-generated: <name>-<namespace>.apps.<cluster-domain>
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sampleapi
  labels:
    app: sampleapi
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: sampleapi
    weight: 100
  port:
    targetPort: http
